# ALL_IECI

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.cpp  config.h  configuracion_servidor.sh  connect_server.cpp  docker-compose.yml  dockerfile  main.cpp  poblado_ftp.sh  proftpd.conf  sftp.conf  sshd_config  verCursoLinux.cpp  ver_asignaturas.cpp  ver_curso_linux.cpp  ver_todas_asignaturas.cpp
